@@ -112,6 +112,7 @@ doubleinc.out doubleinc.svx\
 reenterlots.out reenterlots.svx\
 cs.out cs.pos cs.svx\
 csbad.out csbad.svx\
+csbadsdfix.out csbadsdfix.svx\
 cslonglat.out cslonglat.svx\
 omitfixaroundsolve.out omitfixaroundsolve.svx\
 repeatreading.svx repeatreading.out repeatreading.pos
